<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="detail_creator">Created by %1$s</string>
</resources>
